deploy/k8s/imbs-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imbs-core
spec:
  type: ClusterIP
  selector:
    app: imbs-core
  ports:
  - name: http
    port: 80
    targetPort: 8000
